# hamboo-rs

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  build.rs  partitions.csv
.cargo/: config.toml
src/: axp2101.rs  cst816s.rs  esp32s3.rs  lib.rs  main.rs  settings.rs  storage.rs  ui.rs
ui/: app.slint  apps.slint  appwindow.slint  calculator.slint  face-digital.slint  face-hamboo.slint  face-manager.slint  face-picture.slint  face-pointer.slint  global.slint  home.slint  settings.slint  status-bar.slint  stopwatch.slint  todo.slint  ui.slint
ui/apps/: app-launcher.slint  face-container.slint  music.slint  status-bar.slint
ui/apps/faces/: face-big-digital.slint  face-hamboo.slint
ui/compontents/: battary.slint  button.slint  go-home.slint  page.slint  slider.slint
ui/images/: 0001-face-pointer-hour.pxs  0001-hamboo.pxs  0002-face-pointer-minute.pxs  0003-face-pointer-second.pxs  0004-app-calculate.pxs  face-picture-hamboo.simg
