[package]
name = "hambooo"
version = "0.1.0"
authors = ["Michael"]
edition = "2021"
build = "build.rs"

readme = "README.md"
license = "MIT and Apache-2.0"
description = "Hamboo - ⌚Smartwatch based on Esp32-S3 chip"
keywords = ["hamboo", "Slint", "esp32", "esp32-s3", "smartwatch"]
repository = "https://github.com/hambooooo/hamboo-rs"

[dependencies]
esp-backtrace = { version = "0.11.1", features = [
    "esp32s3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.17.0", features = ["esp32s3", "embedded-hal"] }
esp-alloc = { version = "0.3.0" }
esp-println = { version = "0.9.1", features = ["esp32s3", "log"] }
log = { version = "0.4.21" }

display-interface = { version = "0.5.0" }
display-interface-spi = { version = "0.5.0" }
embedded-graphics = { version = "0.8.1" }
embedded-hal = { version = "1.0.0" }
embedded-hal-bus = { version = "0.1.0" }
mipidsi = { git = "https://github.com/almindor/mipidsi", branch = "master" }
cst816s = { git = "https://github.com/thecodechemist99/cst816s", branch = "master" }
slint = { version = "1.5.1", default-features = false, features = ["compat-1-0", "unsafe-single-threaded", "libm"] }

pcf8563 = { git = "https://github.com/nebelgrau77/pcf8563-rs", branch = "embedded-hal-1" }

lazy_static = { version = "1.4.0", features = ["spin_no_std"] }

spin = {version = "0.9.8", features = ["default"]}

[build-dependencies]
slint-build = { version = "1.5.1" }

[profile.dev]
# Rust debug is too slow. 
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
