[package]
name = "hamboo"
version = "0.1.0"
authors = ["Michael"]
edition = "2021"
build = "build.rs"

readme = "README.md"
license = "MIT and Apache-2.0"
description = "Hamboo - ⌚Smartwatch based on Esp32-S3 chip"
keywords = ["hamboo", "Slint", "esp32", "esp32-s3", "smartwatch"]
repository = "https://github.com/hambooooo/hamboo-rs"

[dependencies]
embassy-net = { version = "0.4.0", features = [
    "tcp",
    "udp",
    "dhcpv4",
    "medium-ethernet",
] }
embassy-net-driver = { version = "0.2" }
embassy-executor = { version = "0.5.0", features = [
    "integrated-timers",
    "nightly",
] }
embassy-time = { version = "0.3" }
embedded-svc = { version = "0.27", default-features = false }
embedded-io = { version = "0.6.1" }

esp-hal = { version = "0.17.0", features = [
    "esp32s3",
    "async",
    "embassy",
    "embassy-executor-thread",
    "embassy-time-timg0"
] }

esp-backtrace = { version = "0.11.1", features = [
    "esp32s3",
    "panic-handler",
    "exception-handler",
    "println",
] }
esp-println = { version = "0.9.1", features = ["esp32s3", "log"] }
log = { version = "0.4.21" }
esp-alloc = { version = "0.3.0" }
esp-wifi = { version = "0.5.1", features = [
    "async",
    "embassy-net",
    "esp32s3",
    "wifi",
] }
esp-storage = { version = "0.3.0", features = ["esp32s3"] }
static_cell = { version = "2.1.0", features = ["nightly"] }
display-interface = { version = "0.5.0" }
display-interface-spi = { version = "0.5.0" }
embedded-graphics = { version = "0.8.1" }
embedded-hal = { version = "1.0.0" }
embedded-hal-bus = { version = "0.1.0" }
embedded-sdmmc = "0.7.0"
mipidsi = { git = "https://github.com/almindor/mipidsi", branch = "master" }
cst816s = { git = "https://github.com/thecodechemist99/cst816s", branch = "master" }
axp2101 = { git = "https://github.com/hambooooo/axp2101-rs", branch = "main" }
pcf8563 = { git = "https://github.com/nebelgrau77/pcf8563-rs", branch = "embedded-hal-1" }

slint = { version = "1.6.0", default-features = false, features = ["compat-1-0", "libm", "unsafe-single-threaded"] }

spin = "0.9.8"

[build-dependencies]
slint-build = "1.6.0"

[profile.dev]
# Rust debug is too slow. 
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
