[package]
name = "hamboo"
version = "0.1.0"
authors = ["Michael"]
edition = "2021"

readme = "README.md"
license = "MIT and Apache-2.0"
description = "Hamboo - ⌚Smartwatch based on Esp32-S3 chip"
keywords = ["hamboo", "Slint", "esp32", "esp32-s3", "smartwatch"]
repository = "https://github.com/hambooooo/hamboo-rs"

[dependencies]
image = { version = "0.24.1" }
resvg = "0.42.0"

[profile.dev]
# Rust debug is too slow. 
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
